# transport

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/plans/: 2026-02-13-transport-design.md  2026-02-13-transport-implementation.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: landing.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: handlers.rs  landing.rs  mod.rs  routes.rs
src-tauri/src/transfer/: throttle.rs
src/components/: ContextMenu.tsx  DebugConsole.tsx  DeviceList.tsx  FileBrowser.tsx  FileItem.tsx  Layout.tsx  MobileLayout.tsx  PathNav.tsx  Toolbar.tsx  TransferQueue.tsx
src/lib/: env.ts  logger.ts  useIsMobile.ts
src/pages/: HomePage.tsx  MobileFileBrowserPage.tsx  MobileHomePage.tsx  MobileSettingsPage.tsx  MobileTransfersPage.tsx  SettingsPage.tsx
src/services/: localApi.ts  remoteApi.ts
src/stores/: deviceStore.ts  transferStore.ts
